--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,14 +2,14 @@
 
 {% block content %}
 
-    {% for post in posts %}
         <div class="card m-3" style="width: 98%;">
           <div class="card-body">
-            <h5 class="card-title"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h5>
+            <h5 class="card-title">{{ post.title }}</h5>
+              {%  if post.published_date %}
             <h6 class="card-subtitle mb-2 text-muted">publicado: {{ post.published_date }}</h6>
+              {%  endif %}
             <p class="card-text">{{ post.text|linebreaksbr }}</p>
           </div>
         </div>
-    {% endfor %}
 
 {% endblock %}
