--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,14 +2,19 @@
 
 {% block content %}
 
-        <div class="card m-3" style="width: 98%;">
-          <div class="card-body">
-            <h5 class="card-title">{{ post.title }}</h5>
-              {%  if post.published_date %}
-            <h6 class="card-subtitle mb-2 text-muted">publicado: {{ post.published_date }}</h6>
-              {%  endif %}
+    <div class="card m-3" style="width: 98%;">
+        <div class="card-body">
+            <div class="d-flex align-items-center justify-content-between">
+                <h5 class="card-title">{{ post.title }}</h5>
+                {% if user.is_authenticated %}
+                    <a href="{% url 'post_edit' pk=post.pk %}"><btn class="btn btn-warning">Edit Post</btn></a>
+                {% endif %}
+            </div>
+            {%  if post.published_date %}
+                <h6 class="card-subtitle mb-2 text-muted">publicado: {{ post.published_date }}</h6>
+            {%  endif %}
             <p class="card-text">{{ post.text|linebreaksbr }}</p>
-          </div>
         </div>
+    </div>
 
 {% endblock %}
